categorise groups, store postdate and add date of release, new page to view details of a release, assign newly added groups to a 'misc' category
git-svn-id: svn://svn.newznab.com/nn/trunk@27 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -5,4 +5,4 @@ RewriteRule ^sitemap\.xml$ /sitemap.php?type=xml
 RewriteRule ^rss$ /rss.php
 RewriteRule ^robots\.txt$ /robots.php
 RewriteRule .*/c([0-9]+)$ /content.php?id=$1	
-RewriteRule ^nzb/(.*)$ /getnzb.php?id=$1	
+RewriteRule .*/nzb/(.*)$ /getnzb.php?id=$1	
