search and results of nzbs, few tweaks to url rewrites, minor style improvements
git-svn-id: svn://svn.newznab.com/nn/trunk@32 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -10,5 +10,6 @@ RewriteRule .*/viewnzb/(.*)$ /viewnzb.php?id=$1
 RewriteRule ^login$ /login.php
 RewriteRule ^logout$ /logout.php
 RewriteRule ^register$ /register.php
+RewriteRule ^search/(.*)$ /search.php?search=$1
 RewriteRule ^search$ /search.php
 RewriteRule ^browse$ /browse.php
