--- a/www/.htaccess
+++ b/www/.htaccess
@@ -7,6 +7,7 @@ RewriteRule ^robots\.txt$ /robots.php
 RewriteRule .*/c([0-9]+)$ /content.php?id=$1	
 RewriteRule .*/nzb/(.*)$ /getnzb.php?id=$1	
 RewriteRule .*/viewnzb/(.*)$ /viewnzb.php?id=$1	
+RewriteRule .*/filelist/(.*)$ /viewfilelist.php?id=$1	
 RewriteRule ^login$ /login.php
 RewriteRule ^logout$ /logout.php
 RewriteRule ^register$ /register.php
