edit users, edit releases, browse releases, browse profile, tweaks to style, html escaping of data
git-svn-id: svn://svn.newznab.com/nn/trunk@46 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -14,3 +14,4 @@ RewriteRule ^register$ /register.php
 RewriteRule ^search/(.*)$ /search.php?search=$1
 RewriteRule ^search$ /search.php
 RewriteRule ^browse$ /browse.php
+RewriteRule ^profile$ /profile.php
