--- a/www/.htaccess
+++ b/www/.htaccess
@@ -15,3 +15,4 @@ RewriteRule ^search/(.*)$ /search.php?search=$1
 RewriteRule ^search$ /search.php
 RewriteRule ^browse$ /browse.php
 RewriteRule ^profile$ /profile.php
+RewriteRule ^api$ /api.php
