support for searching raw binaries
git-svn-id: svn://svn.newznab.com/nn/trunk@66 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -13,6 +13,7 @@ RewriteRule ^logout$ /logout.php
 RewriteRule ^register$ /register.php
 RewriteRule ^search/(.*)$ /search.php?search=$1
 RewriteRule ^search$ /search.php
+RewriteRule ^searchraw$ /searchraw.php
 RewriteRule ^browse$ /browse.php
 RewriteRule ^profile$ /profile.php
 RewriteRule ^api$ /api.php
