--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,20 +1,20 @@
 RewriteEngine on
 
-RewriteRule ^$ /content.php?id=0
-RewriteRule ^sitemap\.xml$ /sitemap.php?type=xml
-RewriteRule ^rss$ /rss.php
-RewriteRule ^robots\.txt$ /robots.php
-RewriteRule .*/c([0-9]+)$ /content.php?id=$1	
-RewriteRule .*/nzb/(.*)$ /getnzb.php?id=$1	
-RewriteRule .*/viewnzb/(.*)$ /viewnzb.php?id=$1	
-RewriteRule ^filelist/(.*)$ /viewfilelist.php?id=$1	
-RewriteRule ^login$ /login.php
-RewriteRule ^logout$ /logout.php
-RewriteRule ^register$ /register.php
-RewriteRule ^search/(.*)$ /search.php?search=$1
-RewriteRule ^search$ /search.php
-RewriteRule ^searchraw/(.*)$ /searchraw.php?search=$1
-RewriteRule ^searchraw$ /searchraw.php
-RewriteRule ^browse$ /browse.php
-RewriteRule ^profile$ /profile.php
-RewriteRule ^api$ /api.php
+RewriteRule ^$ content.php?id=0
+RewriteRule ^sitemap\.xml$ sitemap.php?type=xml
+RewriteRule ^rss$ rss.php
+RewriteRule ^robots\.txt$ robots.php
+RewriteRule .*/c([0-9]+)$ content.php?id=$1	
+RewriteRule .*/nzb/(.*)$ getnzb.php?id=$1	
+RewriteRule .*/viewnzb/(.*)$ viewnzb.php?id=$1	
+RewriteRule ^filelist/(.*)$ viewfilelist.php?id=$1	
+RewriteRule ^login$ login.php
+RewriteRule ^logout$ logout.php
+RewriteRule ^register$ register.php
+RewriteRule ^search/(.*)$ search.php?search=$1
+RewriteRule ^search$ search.php
+RewriteRule ^searchraw/(.*)$ searchraw.php?search=$1
+RewriteRule ^searchraw$ searchraw.php
+RewriteRule ^browse$ browse.php
+RewriteRule ^profile$ profile.php
+RewriteRule ^api$ api.php
