my nzb cart and accompanying rss feed
git-svn-id: svn://svn.newznab.com/nn/trunk@173 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -19,3 +19,4 @@ RewriteRule ^searchraw$ searchraw.php
 RewriteRule ^browse$ browse.php
 RewriteRule ^profile$ profile.php
 RewriteRule ^api$ api.php
+RewriteRule ^cart$ cart.php
