--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-#RewriteBase /
+RewriteBase /~gareth/newznab/www/
 
 RewriteRule ^$ content.php?id=0
 RewriteRule ^sitemap\.xml$ sitemap.php?type=xml
@@ -8,7 +8,8 @@ RewriteRule ^robots\.txt$ robots.php
 RewriteRule .*/c([0-9]+)$ content.php?id=$1	
 RewriteRule .*/nzb/(.*)$ getnzb.php?id=$1	
 RewriteRule .*/viewnzb/(.*)$ viewnzb.php?id=$1	
-RewriteRule ^filelist/(.*)$ viewfilelist.php?id=$1	
+RewriteRule ^filelist/(.*)$ viewfilelist.php?id=$1
+RewriteRule ^series/(.*)$ viewseries.php?id=$1	
 RewriteRule ^nfo/(.*)$ viewnfo.php?id=$1	
 RewriteRule ^login$ login.php
 RewriteRule ^logout$ logout.php
