--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteBase /~gareth/newznab/www/
+#RewriteBase /
 
 RewriteRule ^$ content.php?id=0
 RewriteRule ^sitemap\.xml$ sitemap.php?type=xml
