move import script
git-svn-id: svn://svn.newznab.com/nn/trunk@326 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/testing/import.php.dist
+++ b/misc/testing/import.php.dist
@@ -1,6 +1,6 @@
 <?php
 
-// To use this script rename import.txt to import.php
+// To use this script 
 // edit the hostname, db, username, and password
 // put import.php at the root of newznab.  Create a folder called import.
 // chmod -R 777 import/ (or make it world read/writable.
