rewrite categorisation. (upgrading to this revision will require all your releases exporting and importing as the release.categoryID will no longer be correct.) allow searching for multiple categories from api ( and site ). change api result output to differ from rss.
git-svn-id: svn://svn.newznab.com/nn/trunk@356 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -14,7 +14,7 @@ RewriteRule ^nfo/(.*)$ viewnfo.php?id=$1
 RewriteRule ^login$ login.php
 RewriteRule ^logout$ logout.php
 RewriteRule ^register$ register.php
-RewriteRule ^search/(.*)$ search.php?search=$1 [B]
+RewriteRule ^search/(.*)$ search.php?search=$1
 RewriteRule ^search$ search.php
 RewriteRule ^searchraw/(.*)$ searchraw.php?search=$1
 RewriteRule ^searchraw$ searchraw.php
