--- a/www/.htaccess
+++ b/www/.htaccess
@@ -10,7 +10,8 @@ RewriteRule .*/nzb/(.*)$ getnzb.php?id=$1
 RewriteRule .*/viewnzb/(.*)$ viewnzb.php?id=$1	
 RewriteRule ^filelist/(.*)$ viewfilelist.php?id=$1
 RewriteRule ^series/(.*)$ viewseries.php?id=$1	
-RewriteRule ^nfo/(.*)$ viewnfo.php?id=$1	
+RewriteRule ^nfo/(.*)$ viewnfo.php?id=$1
+RewriteRule ^movie/(.*)$ viewmovie.php?id=$1	
 RewriteRule ^login$ login.php
 RewriteRule ^logout$ logout.php
 RewriteRule ^register$ register.php
