--- a/www/.htaccess
+++ b/www/.htaccess
@@ -22,4 +22,5 @@ RewriteRule ^searchraw$ searchraw.php
 RewriteRule ^browse$ browse.php
 RewriteRule ^profile$ profile.php
 RewriteRule ^api$ api.php
+RewriteRule ^apihelp$ apihelp.php
 RewriteRule ^cart$ cart.php
