view sab queue for people running sab integration
git-svn-id: svn://svn.newznab.com/nn/trunk@626 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -22,6 +22,7 @@ RewriteRule ^searchraw$ searchraw.php
 RewriteRule ^browse$ browse.php
 RewriteRule ^profile$ profile.php
 RewriteRule ^profileedit$ profileedit.php
+RewriteRule ^queue$ viewqueue.php
 RewriteRule ^api$ api.php
 RewriteRule ^apihelp$ apihelp.php
 RewriteRule ^cart$ cart.php
