rewrite rule for users profiles
git-svn-id: svn://svn.newznab.com/nn/trunk@768 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -20,6 +20,7 @@ RewriteRule ^search$ search.php
 RewriteRule ^searchraw/(.*)$ searchraw.php?search=$1
 RewriteRule ^searchraw$ searchraw.php
 RewriteRule ^browse$ browse.php
+RewriteRule ^profile/(.*)$ profile.php?name=$1
 RewriteRule ^profile$ profile.php
 RewriteRule ^profileedit$ profileedit.php
 RewriteRule ^queue$ viewqueue.php
