Prepare My Searches
git-svn-id: svn://svn.newznab.com/nn/trunk@1002 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -28,3 +28,4 @@ RewriteRule ^queue$ viewqueue.php
 RewriteRule ^api$ api.php
 RewriteRule ^apihelp$ apihelp.php
 RewriteRule ^cart$ cart.php
+RewriteRule ^mysearches$ mysearches.php
