browse by group
git-svn-id: svn://svn.newznab.com/nn/trunk@1064 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -19,6 +19,7 @@ RewriteRule ^search$ search.php
 RewriteRule ^searchraw/(.*)$ searchraw.php?search=$1
 RewriteRule ^searchraw$ searchraw.php
 RewriteRule ^browse$ browse.php
+RewriteRule ^browsegroup$ browsegroup.php
 RewriteRule ^movies$ movies.php
 RewriteRule ^profile/(.*)$ profile.php?name=$1
 RewriteRule ^profile$ profile.php
